# multi_car_racing

./: AGENT_TERMINATION.md  API.md  AUTHORS  LICENSE  README.md  TEAMS.md  USAGE.md  __init__.py  pyproject.toml  setup.py
docs/: AGENT_TERMINATION.md  API.md  CTDE.md  FUTURE.md  PETTINGZOO.md
gym_multi_car_racing/: __init__.py  multi_car_racing.py
multi_car_racing/: __init__.py  __main__.py  car_racing.py  multi_car_racing.py  pettingzoo_wrapper.py
