[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-multi-car-racing"
version = "0.0.2"
description = "Gym Multi Car Racing Environment"
readme = "README.md"
authors = [{ name = "Eshaan Naga Venkata" }]
license = { text = "MIT" }
dependencies = [
    "box2d",
    "shapely",
    "numpy",
    "gymnasium",
    "pettingzoo",
    "pygame",
]

[tool.setuptools]
packages = ["gym_multi_car_racing"]
