[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-car-racing"
version = "0.0.2"
description = "Gymnasium Multi Car Racing Environment"
readme = "README.md"
authors = [{ name = "Eshaan Naga Venkata" }]
license = { text = "MIT" }
dependencies = [
    "box2d",
    "shapely",
    "numpy",
    "gymnasium",
    "pettingzoo",
    "pygame",
]

[tool.setuptools]
packages = ["multi_car_racing"]
